<resources>
    <string name="app_name">JoKenPo</string>
    <string name="opcoes">Escolha uma opção</string>
    <string name="ultimaJogada">Última Jogada</string>
    <string name="jogadaPlayer">Você</string>
    <string name="resultado">Resultado</string>
    <string name="jogadaPC">Android</string>
    <string name="venceu">Você Venceu</string>
    <string name="perdeu">Você Perdeu</string>
    <string name="empatou">Você Empatou</string>
    <string name="text_menu_footer">Desenvolvido por Fernando Henry</string>
    <string name="player1_hint">Player 1</string>
    <string name="player2_hint">Player 2</string>
    <string name="game_dialog_title">New game</string>
    <string name="done">Done</string>
    <string name="game_dialog_empty_name">Name mustn\'t be empty</string>
    <string name="game_dialog_same_names">Names mustn\'t be the same</string>
    <string name="game_end_dialog_headline">The winner is</string>
    <string name="player1">Player1</string>
    <string name="player2">Player2</string>
    <string name="jogar_com_bot">Jogar com Bot</string>
    <string name="jogar_player_x_player">Jogar Player x Player</string>
</resources>